# mogusprotocol

./: .gitignore  pyproject.toml  vercel.json
mogusprotocol/audio/: rx_stream.py  tx_stream.py
mogusprotocol/dsp/: agc.py  demodulator.py  fec.py  filters.py  modulator.py  streaming_demod.py  timing.py
mogusprotocol/protocol/: constants.py  frame.py  melody.py  varicode.py
mogusprotocol/ui/: cli.py
tests/: test_demodulator.py  test_fec.py  test_melody.py  test_modulator.py  test_multiframe.py  test_snr_benchmark.py  test_varicode.py
web/: build.py  index.html  serve_dev.py
