[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mogusprotocol"
version = "0.1.0"
description = "PSK31 digital mode with Among Us Drip carrier hopping"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "sounddevice>=0.4.6",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "soundfile>=0.12",
]

[project.scripts]
mogus = "mogusprotocol.ui.cli:cli"
